# artsdata

./: .gitignore  CLAUDE.md  Oversikt.py  main.py  project.doc.md  pyproject.toml
.github/: copilot-instructions.md
.streamlit/: config.toml
0.Fra gamle/: app.py
databehandling/: behandling_main.py  databehandling_artskart_project_info.md  databehandling_project_info.md
databehandling/data_manipulasjon/: adds_forvaltningsinteresse.py  api_artsdata.py  cleans_columns.py  csv_add_columns_arter.py  csv_column_cleaner.py  manglende_navn.py  missing_values_checker.py
databehandling/input_artsdata/: Andøya_fugl.csv  fuglsortland.csv
databehandling/metadata_add/: ArtslisteArtnasjonal_2023_01-31.xlsx
databehandling/output/: Andøya_fugl_cleaned.csv  Andøya_fugl_names_filled_debug.csv  Andøya_fugl_processed.csv  Andøya_fugl_processed_unmatched_log.csv  Andøya_fugl_taxonomy.csv  fuglsortland_cleaned.csv  fuglsortland_processed.csv  fuglsortland_taxonomy.csv  possible_values_output.md
databehandling/output/final/: Andøya_fugl_taxonomy.csv
databehandling/output/interim/: Andøya_fugl_cleaned.csv  (+3 more)
databehandling/test_databehandling/: api_test
databehandling_artskart/output/: Andøya_fugl_processed.csv
databehandling_lyd/: analyser_lyd_main.py  birdnetlib_api  pugwalker.py
databehandling_lyd/functions/: artskart_api.py  birdnetlib_api.py  mdir_arter.py  splitter_lydfilen.py
databehandling_lyd/test/: test_artskart_api_call.py
global_utils/: KI_vektor_skript  KI_vektor_skript.py  column_mapping.py  data_loading.py  filter.py  global_utils_project_info.md  session_state_manager.py
global_utils/filtering/: filter_constants.py  filter_logic.py  filter_logic_project_info.md  filter_ui.py
mapper_streamlit/KI_vektor/: KI_vektor_project_description_md  KI_vektor_skript.py
mapper_streamlit/Kart/: figur_1_kart_punkter.py
mapper_streamlit/landingsside/: dashboard.py  dashboard_project_info.md
pages/: 1_Kart.py  2_Søylediagrammer.py  3_Tidslinjer.py  4_Cluster_analyse.py  5_Nettverksanalyser.py  6_Pivot_Tabell.py  7_Tabeller_for_eksport.py  8_KI_vektor_database.py
script/: __init__.py  main.py
script/Datatreatment/: __init__.py  csv_add_columns_arter.py  csv_column_cleaner.py
(+14 files in other folders)
