[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bareleker_species_app"
version = "0.1.0"
description = "Species data processing and Streamlit viewer."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "openpyxl",
    "plotly",
    "streamlit",
    "matplotlib",
    "seaborn",
    "networkx",
    "folium",
    "streamlit-folium",
    "branca",
    "pydeck>=0.8.0",
    "h3>=3.7.6",
    "numpy>=1.21.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "weaviate-client>=4.8.1",
    "pypdf>=5.4.0",
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "tensorflow>=2.9.0",
    "pydub>=0.25.1",
    "pygwalker>=0.4.9.15",
    "birdnetlib==0.18.0",
    "resampy",
]

# Use find with explicit where clause
[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the current directory (project root)
# exclude = [...] # Can add excludes back if needed, but start simple

# Keep pytest config
[tool.pytest.ini_options]
pythonpath = [
"."
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.6",
]
[tool.ruff]
line-length = 120  # or any number you prefer
